Bug 254177 - [WebGPU] RenderPassEncoder::beginOcclusionQuery will crash when offset%8 != 0
Summary: [WebGPU] RenderPassEncoder::beginOcclusionQuery will crash when offset%8 != 0
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-20 13:19 PDT by Mike Wyrzykowski
Modified: 2023-03-21 13:04 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Wyrzykowski 2023-03-20 13:19:35 PDT
[WebGPU] RenderPassEncoder::beginOcclusionQuery will crash when offset%8 != 0
Comment 1 Radar WebKit Bug Importer 2023-03-20 13:19:59 PDT
<rdar://problem/106959317>
Comment 2 Mike Wyrzykowski 2023-03-20 13:27:46 PDT
Pull request: https://github.com/WebKit/WebKit/pull/11728
Comment 3 EWS 2023-03-21 13:04:17 PDT
Committed 261934@main (2145402eba85): <https://commits.webkit.org/261934@main>

Reviewed commits have been landed. Closing PR #11728 and removing active labels.