[WebGPU] RenderPassEncoder::beginOcclusionQuery will crash when offset%8 != 0 https://bugs.webkit.org/show_bug.cgi?id=254177 <radar://106959317>

Reviewed by Myles C. Maxfield.

In QuerySet.mm, Device::createQuerySet already creates a buffer
with size that is a multiple of 8.

-[MTLRenderCommandEncoder setVisibilityResultMode:offset:] requires
offset to be a multiple of 8. It is the offset into the buffer.

queryIndex is the index of the visiblity query. Each index is offset
8 bytes in the buffer.

So we can simply multiply the index by 8 here.

* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::beginOcclusionQuery):

Canonical link: https://commits.webkit.org/261934@main